# Debate_Backend

./: .gitlab-ci.yml  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.local/share/virtualenv/wheel/3.9/image/1/CopyPipInstall/pip-22.1.2-py3-none-any/pip-22.1.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.9/image/1/CopyPipInstall/setuptools-62.6.0-py3-none-any/setuptools-62.6.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.9/image/1/CopyPipInstall/wheel-0.37.1-py2.py3-none-any/wheel-0.37.1.dist-info/: RECORD
api/: models.py  views.py
backend/: settings.py
config/: .env.template
docker/: docker-compose.prod.yml
docker/django/: Dockerfile
server/: settings.py  urls.py
server/apps/main/: serializers.py  urls.py  views.py
server/settings/components/: common.py
