[tool.poetry]
name = "debate_backend"
version = "0.1.0"
description = ""
authors = ["Jose Santos <67150374+jose-vs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
